# crate-stats

./: .gitignore  Cargo.toml  README.md  github-search-dump-2022-10-23-bonk.csv  github-search-dump-2022-11-07-bonk.csv  iterator_to_generators.rs  shell.nix  statistics-v1.jl  statistics-v2.jl  statistics.jl
docs/: sloc_table.txt  update-2022-10-24.md
mocks/: async_fn.rs  define_gat.rs  dyn_iterator_arg.rs  impl_for.rs  iterator_arg.rs  iterator_ret.rs  many_generics.rs  transmute_with_arguments.rs  transmute_without_arguments.rs  unsafe_fn.rs  where_clause.rs
src/: main.rs  stats.rs  utils.rs
src/stats/: async_code.rs  closures.rs  traits.rs  unsafe_code.rs
