[package]
name = "crate-stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "^1.0", features = ["full", "visit", "extra-traits"] }
proc-macro2 = { version = "^1.0", features = ["span-locations"] }
flate2 = "1"
tar = "0.4"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
ureq = { version = "2.5", features = ["json"] }
glob = "0.3"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
humantime = "2.1"
humantime-serde = "1.1"
hostname = "^0.3"
indicatif = "^0.17"
git2 = { version = "0.15", default-features = false }
rayon = "^1.5"
ignore = "^0.4"

[profile.dev]
opt-level = 2