[package]
name = "crate-stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "^1.0", features = ["full", "visit", "extra-traits"] }
proc-macro2 = { version = "^1.0", features = ["span-locations"] }
flate2 = "1"
tar = "0.4"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
ureq = { version = "2.5", features = ["json"] }
glob = "0.3"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
humantime = "2.1"
humantime-serde = "1.1"
hostname = "^0.3"
indicatif = "^0.17"
git2 = { version = "0.15", default-features = false }
rayon = "^1.5"
ignore = "^0.4"
chrono = "^0.4"
rusqlite = { version = "0.28", features = ["bundled"] }
postgres = { version = "0.19", features = ["with-uuid-1"] }
postgres-types = { version = "0.2", features = ["derive", "uuid-1"] }
tracing = "^0.1.37"
tracing-test = "^0.2.3"
uuid = { version = "^1.2", features = ["v4"] }
quote = "^1.0"
tokei = "^12"

[profile.dev]
opt-level = 2